--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-router-dom": "^6.20.1",
+    "typescript-plugin-css-modules": "^5.0.2",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
